--- a/2024/Official Website/style.css
+++ b/2024/Official Website/style.css
@@ -68,14 +68,7 @@ scrollbar-width: none; */
   font-size: 1em;
   font-weight: 900;
   line-height: 4rem;
-  text-decoration: line-through solid white 5px;
   transition-duration: 200ms;
-}
-
-.menu-welcome:hover {
-  text-decoration: line-through solid rgba(255, 255, 255, 0) 4px;
-  transition-duration: 400ms;
-  transition-timing-function: ease-out;
 }
 
 .menu-option {
@@ -99,17 +92,11 @@ scrollbar-width: none; */
 
 .menu-option[aria-checked="true"] {
   content: ""; /* Checkmark Unicode character */
-  color: white;
+  color: rgb(255, 255, 255);
 }
 
 .menu-option[aria-checked="false"] {
   content: ""; /* Empty space */
-}
-
-.menu-option:focus {
-  color: white;
-  transition-duration: 300ms;
-  transition-delay: 150ms;
 }
 
 .menu-option:nth-child(1)[aria-checked="true"] .choice-text {
@@ -123,18 +110,18 @@ scrollbar-width: none; */
 
 #tech-selector {
   right: 0%;
-  bottom: 15%;
+  bottom: 16%;
   writing-mode: sideways-lr;
 }
 
 #github-selector {
-  bottom: 25%;
+  bottom: 26%;
   right: 10%;
   writing-mode: sideways-lr;
 }
 
 #project-selector {
-  right: 10%;
+  right: 11%;
   bottom: 15%;
 }
 
@@ -146,8 +133,8 @@ scrollbar-width: none; */
 .act-rotater {
   transform: rotate(270deg);
   position: absolute;
-  right: -32.5%;
-  bottom: 75%;
+  right: -42.5%;
+  bottom: 115%;
 }
 
 /*  */
